--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dat.gui": "^0.7.9",
+    "material-icons": "^1.13.12",
     "three": "^0.158.0"
   },
   "devDependencies": {
