--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portefoly",
   "version": "1.0.0",
   "description": "Mening portefolyam",
-  "main": "three.js",
+  "main": "gsap.js",
   "scripts": {
     "dev": "npx tailwindcss -i ./css/app.css -o ./dist/main.css --watch"
   },
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dat.gui": "^0.7.9",
+    "gsap": "^3.12.4",
     "material-icons": "^1.13.12",
     "three": "^0.158.0"
   },
