--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "@vueuse/head": "^2.0.0",
     "pinia": "^3.0.1",
     "simple-icons": "^14.14.0",
     "tailwindcss": "^4.1.7",
